# store-backend

./: .env.example  .gitignore  README.md  env.example  notes.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0667251eede8_init.py  087ac91db5f4_add_reviews.py  1b142c5cda17_rename_reviews_commented_at_to_created_.py  2ec06dd0417e_fix_created_at.py  3d0e5749384e_init.py  45e434524940_add_image_url_to_product.py  72cfea78523e_add_users.py  80c1aa82de21_init.py  831d01ef4d74_add_avg_rating_for_product.py  88ccc77f11b5_init.py  bbc376e95396_add_refresh_tokens.py  dfbd5c9f1e4b_init.py  ed9d1abd628a_add_max_length_to_review_comment.py
app/: deps.py  main.py  models.py  schemas.py
app/core/: config.py  db.py  security.py
app/routers/: auth.py  categories.py  products.py  reviews.py  users.py
