[project]
name = "store-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "NPY",      # Some numpy-specific things
    "RUF",      # Ruff-specific rules
    "ARG001",   # unused arguments in functions
    "ANN",      # flake8-annotations (Strict type hinting)
    "B",        # flake8-bugbear (Common logic errors)
    "FAST",     # FastAPI
    "ASYNC",    # flake8-async (crucial for FastAPI/Async SQLAlchemy)
]

[dependency-groups]
dev = [
    "pyrefly>=0.51.2",
    "ruff>=0.15.0",
]
